# Blender-NRP

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.worker  LICENSE  README.md  blender_manifest.toml  pyproject.toml
.github/workflows/: worker-image.yml
blender_nrp/: __init__.py  addon.py  light_build.py  panels.py  preferences.py  preview.py  properties.py  proxy_runtime.py
blender_nrp/backends/: __init__.py  _output.py  cycles_capture.py  interface.py  stock_blender_hemi.py
blender_nrp/core/: __init__.py  comfy_export.py  coords.py  cost.py  execution.py  gather.py  images.py  jobs.py  light_objects.py  lighting.py  lights.py  metadata.py  optimize_fallback.py  path_cache.py  path_tracer.py  pipeline.py  proxy.py  reports.py  rgb9e5.py  rig_snapshots.py  staleness.py  torch_path_tracer.py  validation.py
blender_nrp/operators/: __init__.py  _helpers.py  bake_cache.py  export_lights.py  (+10 more)
docs/: DEVELOPMENT.md  ROADMAP.md  USER_GUIDE.md
scripts/: _job_worker.py  bake_fixture.py  container_smoke.sh  cross_repo_roundtrip.py  package_addon.py  relight_fixture.py  run_bake_job.py  run_solve_job.py  run_train_job.py  validate_cache.py  validate_light_json.py
tests/: blender_smoke.py  test_cache_schema.py  test_comfy_export.py  test_coords.py  test_fixture_workflow.py  test_gather.py  test_light_json.py  test_light_objects.py  test_metadata.py  test_operator_helpers.py  test_packed_cache.py  test_path_tracer.py  test_quad_lights.py  test_torch_proxy.py  test_v3_cost.py  test_v3_jobs.py  test_v3_lighting.py  test_v3_pipeline.py  test_v3_snapshots.py
(+17 files in other folders)
