[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-nrp"
version = "0.3.0"
description = "Blender add-on for Neural Render Proxy baking and relighting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Blender-NRP contributors" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
torch = ["torch>=2.2"]

[tool.setuptools]
packages = ["blender_nrp", "blender_nrp.backends", "blender_nrp.core", "blender_nrp.operators", "blender_nrp.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Scripts and the Blender smoke test bootstrap sys.path before importing the package.
"scripts/*" = ["E402"]
"tests/blender_smoke.py" = ["E402"]
